--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://templatemo.com/tm-562-space-dynamic
                         </div>
                         <div class="col-lg-6">
                             <div class="right-image wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.5s">
-                                <img src="images/second.jpg" alt="team meeting">
+                                <img src="images/home.jpg" alt="team meeting">
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@ https://templatemo.com/tm-562-space-dynamic
                                     </div>
                                     <div class="right-text">
                                         <h4>Who We Are:</h4>
-                                        <p> With a team of experienced professionals, we specialize in delivering comprehensive software solutions to businesses of all sizes and industries. Our expertise spans software development, customization, implementation, and support, tailored to meet the unique needs of each client.</p>
+                                        <p> At RPBS, our team of experts delivers complete software solutions for businesses. From development to support, we cover it all, customizing each solution to fit our clients' specific needs.</p>
                                     </div>
                                 </div>
                             </div>
@@ -137,19 +137,19 @@ https://templatemo.com/tm-562-space-dynamic
                                     </div>
                                     <div class="right-text">
                                         <h4>Our Mission:</h4>
-                                        <p>At RPBS, our mission is to empower businesses to thrive in the digital age by providing innovative software solutions that drive growth and efficiency. We are committed to delivering excellence in every project we undertake, leveraging our technical expertise and industry knowledge to deliver tangible results for our clients.</p>
+                                        <p>At RPBS, we specialize in creating software that helps businesses grow and run more efficiently. With our expertise and dedication, we make sure our clients see tangible benefits from our solutions.</p>
                                     </div>
                                 </div>
                             </div>
 
                              <div class="col-lg-6">
-                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="1.1s">
+                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
                                     <div class="icon">
-                                        <img src="assets/images/service-icon-04.png" alt="">
+                                        <img src="assets/images/service-icon-02.png" alt="">
                                     </div>
-                                    <div class="right-text">
+                                   <div class="right-text">
                                         <h4>Client Focus:</h4>
-                                        <p>At RPBS, client satisfaction is our top priority. We believe in building long-term partnerships with our clients, based on trust, transparency, and mutual success. We take the time to understand our clients' goals and challenges, and we work tirelessly to deliver solutions that exceed their expectations and help them achieve their objectives.</p>
+                                        <p>At RPBS, client satisfaction is our top priority. We believe in building long-term partnerships with our clients, based on trust, transparency, and mutual success.  </p>
                                     </div>
                                 </div>
                             </div>
@@ -161,7 +161,7 @@ https://templatemo.com/tm-562-space-dynamic
                                     </div>
                                     <div class="right-text">
                                         <h4>Why Choose Us:</h4>
-                                        <p>RPBS is your trusted partner for all your software needs. What sets us apart is our dedication to quality, innovation, and customer service. We combine technical expertise with a deep understanding of business processes to deliver solutions that are not only cutting-edge but also practical and effective. With RPBS, you can trust that your project is in good hands, from start to finish.</p>
+                                       <p>RPBS is your trusted partner for all your software needs. What sets us apart is our dedication to quality, innovation, and customer service. With RPBS, you can trust that your project is in good hands, from start to finish.</p>
                                     </div>
                                 </div>
                             </div>
