--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ https://templatemo.com/tm-562-space-dynamic
                              <div class="col-lg-6">
                                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
                                     <div class="icon">
-                                        <img src="assets/images/service-icon-02.png" alt="">
+                                        <img src="assets/images/service-icon-01.png" alt="">
                                     </div>
                                    <div class="right-text">
                                         <h4>Client Focus:</h4>
@@ -157,7 +157,7 @@ https://templatemo.com/tm-562-space-dynamic
                             <div class="col-lg-6">
                                 <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                                     <div class="icon">
-                                        <img src="images/introduction.png" alt="reporting">
+                                        <img src="assets/images/service-icon-02.png" alt="reporting">
                                     </div>
                                     <div class="right-text">
                                         <h4>Why Choose Us:</h4>
