--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ https://templatemo.com/tm-562-space-dynamic
             <div class="row">
                 <div class="col-lg-4">
                     <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="images/About.jpg" alt="person graphic">
+                        <img src="images/Solutions.jpg" alt="person graphic">
                     </div>
                 </div>
                 <div class="col-lg-8 align-self-center">
