--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@ https://templatemo.com/tm-562-space-dynamic
                         <!-- ***** Menu Start ***** -->
                          <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                            
                             <li class="scroll-to-section"><a href="#services">Services</a></li>
-                            <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
-                            <li class="scroll-to-section"><a href="#blog">Blog</a></li>
                             <li class="scroll-to-section"><a href="#solutions">Solutions</a></li>
+                            <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
                             <li class="scroll-to-section"><a href="#about">About Us</a></li>
+                            <li class="scroll-to-section"><a href="#blog">Blog</a></li>
                             <li class="scroll-to-section">
                                 <div class="main-red-button"><a href="#contact">Contact Now</a></div>
                             </li>
@@ -108,71 +107,7 @@ https://templatemo.com/tm-562-space-dynamic
         </div>
     </div>
 
-    <div id="about" class="about-us section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                        <img src="images/About.jpg" alt="person graphic">
-                    </div>
-                </div>
-                <div class="col-lg-8 align-self-center">
-                    <div class="services">
-                        <div class="row">
-
-                            <div class="col-lg-6">
-                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
-                                    <div class="icon">
-                                        <img src="assets/images/service-icon-02.png" alt="">
-                                    </div>
-                                    <div class="right-text">
-                                        <h4>Who We Are:</h4>
-                                        <p> At RPBS, our team of experts delivers complete software solutions for businesses. From development to support, we cover it all, customizing each solution to fit our clients' specific needs.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-6">
-                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.9s">
-                                    <div class="icon">
-                                        <img src="assets/images/service-icon-03.png" alt="">
-                                    </div>
-                                    <div class="right-text">
-                                        <h4>Our Mission:</h4>
-                                        <p>At RPBS, we specialize in creating software that helps businesses grow and run more efficiently. With our expertise and dedication, we make sure our clients see tangible benefits from our solutions.</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                             <div class="col-lg-6">
-                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
-                                    <div class="icon">
-                                        <img src="assets/images/service-icon-01.png" alt="">
-                                    </div>
-                                   <div class="right-text">
-                                        <h4>Client Focus:</h4>
-                                        <p>At RPBS, client satisfaction is our top priority. We believe in building long-term partnerships with our clients, based on trust, transparency, and mutual success.  </p>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-6">
-                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                                    <div class="icon">
-                                        <img src="assets/images/service-icon-02.png" alt="reporting">
-                                    </div>
-                                    <div class="right-text">
-                                        <h4>Why Choose Us:</h4>
-                                       <p>RPBS is your trusted partner for all your software needs. What sets us apart is our dedication to quality, innovation, and customer service. With RPBS, you can trust that your project is in good hands, from start to finish.</p>
-                                    </div>
-                                </div>
-                            </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div></div>
-
+   
     <div id="services" class="our-services section">
         <div class="container">
             <div class="row">
@@ -219,7 +154,7 @@ https://templatemo.com/tm-562-space-dynamic
     </div>
 
 
-    <div id="solutions" class="about-us section">
+ <div id="solutions" class="about-us section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
@@ -283,6 +218,7 @@ https://templatemo.com/tm-562-space-dynamic
             </div>
         </div>
     </div></div>
+   
 
     <div id="portfolio" class="our-portfolio section">
         <div class="container">
@@ -349,6 +285,73 @@ https://templatemo.com/tm-562-space-dynamic
             </div>
         </div>
     </div>
+
+     <div id="about" class="about-us section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="left-image wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <img src="images/About.jpg" alt="person graphic">
+                    </div>
+                </div>
+                <div class="col-lg-8 align-self-center">
+                    <div class="services">
+                        <div class="row">
+
+                            <div class="col-lg-6">
+                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
+                                    <div class="icon">
+                                        <img src="assets/images/service-icon-02.png" alt="">
+                                    </div>
+                                    <div class="right-text">
+                                        <h4>Who We Are:</h4>
+                                        <p> At RPBS, our team of experts delivers complete software solutions for businesses. From development to support, we cover it all, customizing each solution to fit our clients' specific needs.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.9s">
+                                    <div class="icon">
+                                        <img src="assets/images/service-icon-03.png" alt="">
+                                    </div>
+                                    <div class="right-text">
+                                        <h4>Our Mission:</h4>
+                                        <p>At RPBS, we specialize in creating software that helps businesses grow and run more efficiently. With our expertise and dedication, we make sure our clients see tangible benefits from our solutions.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                             <div class="col-lg-6">
+                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.7s">
+                                    <div class="icon">
+                                        <img src="assets/images/service-icon-01.png" alt="">
+                                    </div>
+                                   <div class="right-text">
+                                        <h4>Client Focus:</h4>
+                                        <p>At RPBS, client satisfaction is our top priority. We believe in building long-term partnerships with our clients, based on trust, transparency, and mutual success.  </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="item wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
+                                    <div class="icon">
+                                        <img src="assets/images/service-icon-02.png" alt="reporting">
+                                    </div>
+                                    <div class="right-text">
+                                        <h4>Why Choose Us:</h4>
+                                       <p>RPBS is your trusted partner for all your software needs. What sets us apart is our dedication to quality, innovation, and customer service. With RPBS, you can trust that your project is in good hands, from start to finish.</p>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div></div>
+
+
 
     <div id="blog" class="our-blog section">
         <div class="container">
@@ -435,11 +438,11 @@ https://templatemo.com/tm-562-space-dynamic
     <div id="contact" class="contact-us section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
+            <div class="col-lg-6 align-self-center wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.25s">
                     <div class="section-heading">
                         <h2>Feel Free To Send Us a Message About Your Website Needs</h2><br>
                         <h3>Let’s Create Progress Together</h3><br>
-                        <h3> Address : 401/402,4th Floor,Sai Villa Commercial Appartment,Sr No 166,Malwadi road, Opps. to Sahyadri Hospital, Hadapsar,Pune-411028</h3>
+                        <h5 style="color: white;"> Address : 401/402,4th Floor,Sai Villa Commercial Appartment,Sr No 166,Malwadi road, Opps. to Sahyadri Hospital, Hadapsar,Pune-411028</h5>
 
                         <div class="phone-info">
                             <h4>For any enquiry, Call Us: <span><i class="fa fa-phone"></i> <a href="#">020-27212597</a></span></h4>
