--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ https://templatemo.com/tm-562-space-dynamic
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
                             <li class="scroll-to-section"><a href="#services">Services</a></li>
                             <li class="scroll-to-section"><a href="#solutions">Solutions</a></li>
-                            <li class="scroll-to-section"><a href="#portfolio">Portfolio</a></li>
+                            <li class="scroll-to-section"><a href="#portfolio">We Provide</a></li>
                             <li class="scroll-to-section"><a href="#about">About Us</a></li>
                             <li class="scroll-to-section"><a href="#blog">Blog</a></li>
                             <li class="scroll-to-section">
@@ -113,7 +113,7 @@ https://templatemo.com/tm-562-space-dynamic
             <div class="row">
                 <div class="col-lg-6 align-self-center  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.2s">
                     <div class="left-image">
-                        <img src="images/Services (1).jpg" alt="">
+                        <img src="images/Services.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.2s">
@@ -199,6 +199,7 @@ https://templatemo.com/tm-562-space-dynamic
                                         <!-- <h4>Client Focus:</h4> -->
                                         <p>We're passionate about using technology to drive positive change for our clients. With our expertise, we'll help your business thrive in today's competitive market.</p>
                                     </div>
+                            <!-- No matter your industry or challenges, RPBS is here to help you succeed. Contact us today to learn more about how we can support your business goals."-->
                                 </div>
                             </div>
 
@@ -211,6 +212,7 @@ https://templatemo.com/tm-562-space-dynamic
                                         <!-- <h4>Why Choose Us:</h4> -->
                                        <p>RPBS is your trusted partner for all your software needs. What sets us apart is our dedication to quality, innovation, and customer service. With RPBS, you can trust that your project is in good hands, from start to finish.</p>
                                     </div>
+                                    <!-- We're passionate about using technology to drive positive change for our clients. With our expertise, we'll help your business thrive in today's competitive market.  -->
                                 </div>
                             </div>
                     </div>
@@ -234,11 +236,11 @@ https://templatemo.com/tm-562-space-dynamic
                     <a href="#">
                         <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.3s">
                             <div class="hidden-content">
-                                <h4>SEO Analysis</h4>
-                                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                                <h4>Website Development</h4>
+                                <p>RPBS specializes in website development, creating customized online platforms tailored to meet the unique needs of businesses. From design to functionality, we focus on delivering user-friendly and impactful websites that enhance online presence, engage visitors, and drive business growth.</p>
                             </div>
                             <div class="showed-content">
-                                <img src="assets/images/portfolio-image.png" alt="">
+                                <img src="images/Web-Devlopment.jpg" alt="">
                             </div>
                         </div>
                     </a>
@@ -247,11 +249,11 @@ https://templatemo.com/tm-562-space-dynamic
                     <a href="#">
                         <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                             <div class="hidden-content">
-                                <h4>Website Reporting</h4>
-                                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                                <h4>Data Analytics</h4>
+                                <p>RPBS's data analytics platforms empower businesses to extract valuable insights from their data, enabling informed decision-making and driving strategic growth initiatives. With advanced analytics capabilities, including data visualization and predictive modeling, these platforms help businesses optimize operations and gain a competitive edge in their industry.</p>
                             </div>
                             <div class="showed-content">
-                                <img src="assets/images/portfolio-image.png" alt="">
+                                <img src="images/Data-Analytics.jpg" alt="">
                             </div>
                         </div>
                     </a>
@@ -260,11 +262,11 @@ https://templatemo.com/tm-562-space-dynamic
                     <a href="#">
                         <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                             <div class="hidden-content">
-                                <h4>Performance Tests</h4>
-                                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                                <h4>AWS</h4>
+                                <p>RPBS offers AWS solutions, providing cloud computing services for scalability, flexibility, and cost-effectiveness in infrastructure management, data storage, and application deployment.</p>
                             </div>
                             <div class="showed-content">
-                                <img src="assets/images/portfolio-image.png" alt="">
+                                <img src="images/AWS.jpg" alt="">
                             </div>
                         </div>
                     </a>
@@ -273,11 +275,11 @@ https://templatemo.com/tm-562-space-dynamic
                     <a href="#">
                         <div class="item wow bounceInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="hidden-content">
-                                <h4>Data Analysis</h4>
-                                <p>Lorem ipsum dolor sit ameti ctetur aoi adipiscing eto.</p>
+                                <h4>Digital Marketing</h4>
+                                <p>RPBS specializes in digital marketing services, helping businesses enhance their online presence, reach target audiences, and achieve marketing objectives through various digital channels such as social media, search engines, email, and content marketing.</p>
                             </div>
                             <div class="showed-content">
-                                <img src="assets/images/portfolio-image.png" alt="">
+                                <img src="images/DM.jpg" alt="">
                             </div>
                         </div>
                     </a>
