--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ https://templatemo.com/tm-562-space-dynamic
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
-                    <form id="contact" action="" method="post">
+                    <form id="contact" action="submit_form.php" method="post">
                         <div class="row">
                             <div class="col-lg-6">
                                 <fieldset>
